--- a/gui/autorecover.glade
+++ b/gui/autorecover.glade
@@ -82,7 +82,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">MyPaint exited unexpectedly in the past, and it looks like some of your work wasn’t saved. You can recover a document from its automatic backup now, or cancel to start on a fresh canvas. Any backups you don't choose to recover will still be here next time.</property>
+            <property name="label" translatable="yes" context="Autosave Recovery dialog|">MyPaint crashed with unsaved work, but it made backups. You can recover a file now, or leave it till you start MyPaint again.</property>
             <property name="wrap">True</property>
             <property name="wrap_mode">word-char</property>
           </object>
