--- a/gui/preferenceswindow.glade
+++ b/gui/preferenceswindow.glade
@@ -370,8 +370,7 @@
                     <property name="xalign">0</property>
                     <property name="yalign">0</property>
                     <property name="label" translatable="yes" context="Prefs Dialog|Button|Pointer Button Mappings|">• The space bar can be used like Button2.
-• Some tablet pads' buttons cannot be held down when pressed.
-• Keyboard shortcuts can be changed in the main menu. Hover over a menu item and press the key you want.</property>
+• Some tablet pads' buttons cannot be held down when pressed.</property>
                     <property name="wrap">True</property>
                     <property name="wrap_mode">word-char</property>
                   </object>
